     more consistently across a wider range of printers.  In
     particular, the extended ink information command (escputil -e)
     should now work correctly on all models from the Stylus Color 740
     through the present.

  8) Preliminary support for the Epson Stylus C68, C87, C88, CX3700,
     CX3800, CX3810, CX4200, CX4700, CX4800, CX5800, CX7700, CX7800,
     D68, D88, DX3800, DX3850, and DX4800.  These printers are
     expected to be fully functional (for the multi-function devices,
     this package supports only the printer function).

  9) Preliminary support for the Epson Stylus Photo R2400.  This
     printer has been partially tuned, but there will likely be
     further changes to this driver.

  10) Experimental support for the Epson Stylus Photo RX700.  This
     printer may or may not function correctly, and is not likely to
     be properly tuned.

  11) Initial support for Canon S200, SELPHY CP-510 and SELPHY CP-710;
     Sony UP-DR150, and Olympus P-11 has been added.

  12) The Canon PIXMA iP4000 printers can now print to cds.  Duplex
     printing with binding on the short side is now supported, too.

  13) New "transposed" resolutions (1440x720 and 2880x1440) have been
     added for some Epson printers.  These resolutions are actually
     equivalent to 720x1440 and 1440x2880 DPI respectively.  In some
     cases these may yield better results (specifically, less
     microbanding) than the normal 1440x720 and 2880x1440 DPI
     resolutions.

  14) Quadtone printing now works correctly regardless of whether
     color or grayscale mode is selected.


================================================================

Overall changes between Gimp-Print 4.2 and Gutenprint 5.0:

* General User-Visible Changes:

  1) In general, Gutenprint 5.0 is very different from Gimp-Print 4.2.
     Gutenprint 5.0 offers many new options (which are described
     separately below), and many options that are present in both 4.2